--- a/Heroku/Heroku_Add-ons/styles/headerStyle.css
+++ b/Heroku/Heroku_Add-ons/styles/headerStyle.css
@@ -16,6 +16,10 @@
     display: inline-flex;
     gap: 10px;
 }
+.navLi2{
+    display: inline-flex;
+    gap: 10px;
+}
 .navContainer{
     position: relative;
     z-index: 0;
@@ -82,6 +86,13 @@
     display: flex;
     align-items: center;
     gap:5px;
+}
+.toolsBars{
+    width: 30px;
+    height: 23px;
+    background-color: transparent;
+    border: none;
+    display: none;
 }
 .inputWrap{
     background: rgba(255, 255, 255, 0.1);
