--- a/Heroku/Heroku_Add-ons/styles/media.css
+++ b/Heroku/Heroku_Add-ons/styles/media.css
@@ -1,7 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+@media(max-width: 1260px){
+    .produktItem{
+        width: 32%;
+    }
 }
 @media(max-width: 1100px){
     .navLi2{
@@ -13,5 +14,11 @@
     .toolsBars{
         display: block;
         
+    }
+    .producstWrapper{
+        width: 95%;
+    }
+    .mainNavWrap{
+        width: 95%;
     }
 }
