--- a/Heroku/Heroku_Add-ons/styles/main.css
+++ b/Heroku/Heroku_Add-ons/styles/main.css
@@ -11,6 +11,7 @@
     max-width:1200px;
     gap: 1%;
     padding: 0 2%;
+    justify-content: center;
 }
 .ourProducts{
     display: flex;
@@ -65,7 +66,13 @@ hr{
     align-items: center;
     padding: 2%;
     text-align: center;
-    border: 1px solid #d2d6d6
+}
+.produktLink{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;;
+    text-align: center;
 }
 @media(max-width: 1260px){
     .produktItem{
@@ -86,6 +93,11 @@ hr{
         text-align: center;
     }
 
+}
+@media(max-width: 560px){
+    .produktItem{
+        width: 98%;
+    }
 }
 .produktItem:hover{
     border: 1px solid #4f4792;
