--- a/HW_21.06.2023/style.css
+++ b/HW_21.06.2023/style.css
@@ -19,6 +19,93 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
-  background-color: aqua;
+  background-color: rgb(166, 187, 187);
+}
+.container .getUserInfo {
+  width: 20%;
+  height: 50px;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 8px;
+  border: 1px solid rgb(19, 131, 131);
+  margin: 2% 0;
+}
+.container .start, .container .userChange button {
+  width: 20%;
+  height: 50px;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 8px;
+  border: 1px solid rgb(19, 131, 131);
+  margin: 2% 0;
+  width: 5%;
+  cursor: pointer;
+}
+.container .userChange {
+  width: 16%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1% 0;
+  gap: 2%;
+}
+.container .userChange button {
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.container .infoContainer {
+  padding: 3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.container .infoContainer .user-container {
+  background-color: white;
+  width: 70%;
+  border-radius: 20px;
+}
+.container .infoContainer .user-container .user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.container .infoContainer .user-container .user h2 {
+  text-align: center;
+}
+.container .infoContainer .user-container .posts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 1%;
+}
+.container .infoContainer .user-container .posts .infoItem {
+  width: 30%;
+  border: 1px solid rgb(129, 104, 80);
+  border-radius: 20px;
+  margin: 1% 0;
+  padding: 1%;
 }
