hompage.html update

--- a/The_Dark_light_Projekt/components/footer.html
+++ b/The_Dark_light_Projekt/components/footer.html
@@ -7,7 +7,80 @@
     <link rel="stylesheet" href="../styles/_footer.css">
 </head>
 <body>
-    
+    <section class="footer">
+        <div class="footerwrap">
+            <div class="footerContainer">
+                <img src="../asets/navBar/icons/IMAGE_1.svg" alt="">
+                <div class="socialLinkContainer">
+                    <img src="" alt="" class="socialLinks">
+                    <img src="" alt="" class="socialLinks">
+                    <img src="" alt="" class="socialLinks">
+                    <img src="" alt="" class="socialLinks">
+                </div>
+            </div>
+            <div class="footerContainer">
+                <h6 class="linksTitle"></h6>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+            </div>
+            <div class="footerContainer">
+                <h6 class="linksTitle"></h6>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+            </div>
+            <div class="contacts">
+                <h6 class="linksTitle"></h6>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="../scripts/footer.js"></script>
 </html>
