--- a/The_Dark_light_Projekt/components/home.html
+++ b/The_Dark_light_Projekt/components/home.html
@@ -5,9 +5,145 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/_home.css">
+    <link rel="stylesheet" href="../styles/_navBar.css">
+    <link rel="stylesheet" href="../styles/_footer.css">
 </head>
 <body>
-    
+    <section class="homePage">
+        <div class="homeWrap">
+            <div class="homeInfo">
+                <div class="welcome">
+                    <div class="spanBar"></div>
+                    <h6>Welcome to pages!!!</h6>
+                </div>
+                <div class="titleText">
+                    <h1>Your Books From The Best Writer</h1>
+                    <p>We belive that reading are essentional to a healthy culture. They're where authors can connect with readers.</p>
+                </div>
+                <div class="orderWrap">
+                    <button class="order">Order Todey</button>
+                    <a href="" class="demo">Read Free Demo</a>
+                </div>
+                <div class="producstInfo">
+                    <div class="produktInfoContainer">
+                        <div class="pointContainer">
+                        <img src="../asets/home/icons/Rectangle.svg" alt="">
+                        </div>
+                        <div class="productTextBox">
+                            <h3 class="productParam">Pages</h3>
+                            <p class="productValue value1"></p>
+                        </div>
+                    </div>
+                    <div class="produktInfoContainer">
+                        <div class="pointContainer">
+                        <img src="../asets/home/icons/Rectangle.svg" alt="">
+                        </div>
+                        <div class="productTextBox">
+                            <h3 class="productParam">Length</h3>
+                            <p class="productValue value2"></p>
+                        </div>
+                    </div>
+                    <div class="produktInfoContainer">
+                        <div class="pointContainer">
+                        <img src="../asets/home/icons/Rectangle.svg" alt="">
+                        </div>
+                        <div class="productTextBox">
+                            <h3 class="productParam">Raiting</h3>
+                            <p class="productValue value3"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="goodsImg">
+                <img src="../asets/home/images/book_img.svg" alt="altImg">
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footerwrap">
+            <div class="footerContainer">
+                <img src="../asets/navBar/icons/IMAGE_1.svg" alt="">
+                <div class="socialLinkContainer">
+                    <a href="">
+                    <img src="" alt="" class="socialLinks">
+                    </a>
+                    <a href="">
+                    <img src="" alt="" class="socialLinks">
+                    </a>
+                    <a href="">
+                    <img src="" alt="" class="socialLinks">
+                    </a>
+                    <a href="">
+                    <img src="" alt="" class="socialLinks">
+                    </a>
+                </div>
+            </div>
+            <div class="footerContainer">
+                <h6 class="linksTitle"></h6>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+            </div>
+            <div class="footerContainer">
+                <h6 class="linksTitle"></h6>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+            </div>
+            <div class="contacts">
+                <h6 class="linksTitle"></h6>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+<script src="../scripts/navBar.js"></script>
 <script src="../scripts/home.js"></script>
+<script src="../scripts/footer.js"></script>
 </html>
