--- a/The_Dark_light_Projekt/components/index.html
+++ b/The_Dark_light_Projekt/components/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/_navBar.css">
 </head>
 <body>
+    
 </body>
-<script src="../scripts/navBar.js"></script>
+<script src="../scripts/index.js"></script>
 </html>
