author page update

--- a/The_Dark_light_Projekt/components/author.html
+++ b/The_Dark_light_Projekt/components/author.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="../styles/_author.css">
 </head>
 <body>
-    
+    <section class="author">
+        <div class="authorProducts">
+            <h2 class="authorBooks">The Author's Books</h2>
+            <div class="divideBar"></div>
+            <div class="productWrap">
+            </div>
+        </div>
+    </section>
 </body>
 <script src="../scripts/author.js"></script>
 </html>
