scripts and navigation update

--- a/The_Dark_light_Projekt/components/author.html
+++ b/The_Dark_light_Projekt/components/author.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/_author.css">
+    <link rel="stylesheet" href="../styles/_navBar.css">
+    <link rel="stylesheet" href="../styles/_footer.css">
 </head>
 <body>
     <section class="author">
@@ -15,6 +17,126 @@
             </div>
         </div>
     </section>
+    <section class="authorDetail">
+        <div class="authorProducts">
+            <div class="authorInfo">
+                <div class="authorPhoto">
+                    <div class="InnerPhoto">
+                    </div>
+                </div>
+                <div class="authorDescr">
+                    <h2 class="authorBooks">About The Author</h2>
+                    <div class="divideBar"></div>
+                    <p class="bookDescr">We belive thet bookstore are essentional to a healthy culture.They're where authors can connect with readers,where we discover new writers, where children get hooked on the thrill of reading that can last a lifetime</p>
+                    <div class="authorRaiting">
+                        <div class="raitingItem">
+                            <p class="raiting"></p>
+                            <p class="bookDescr">
+                                Books Published
+                            </p>
+                        </div>
+                        <div class="raitingItem borders">
+                            <p class="raiting"></p>
+                            <p class="bookDescr">
+                                User Rewiews
+                            </p>
+                        </div>
+                        <div class="raitingItem">
+                            <p class="raiting"></p>
+                            <p class="bookDescr">
+                                Best seller Awards
+                            </p>
+                        </div>
+                    </div>
+                    <div class="authorContacts">
+                        <div class="authorQr"></div>
+                        <div class="contactsContainer">
+                            <p class="authorName"></p>
+                            <p class="authorEmail"></p>
+                            <p class="authorphone"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footerwrap">
+            <div class="footerContainer">
+                <img src="../asets/navBar/icons/IMAGE_1.svg" alt="">
+                <div class="socialLinkContainer">
+                    <img src="" alt="" class="socialLinks">
+                    <img src="" alt="" class="socialLinks">
+                    <img src="" alt="" class="socialLinks">
+                    <img src="" alt="" class="socialLinks">
+                </div>
+            </div>
+            <div class="footerContainer">
+                <h6 class="linksTitle"></h6>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+            </div>
+            <div class="footerContainer">
+                <h6 class="linksTitle"></h6>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+                <div class="linksContainer">
+                    <span class="linkSpan">...</span>
+                    <a href="" class="navLinks"></a>
+                </div>
+            </div>
+            <div class="contacts">
+                <h6 class="linksTitle"></h6>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+                <div class="contactContainer">
+                    <p class="contactTitle"></p>
+                    <p class="contactValue"></p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+<script src="../scripts/navBar.js"></script>
 <script src="../scripts/author.js"></script>
+<script src="../scripts/footer.js"></script>
+
 </html>
