--- a/The_Dark_light_Projekt/styles/_author.css
+++ b/The_Dark_light_Projekt/styles/_author.css
@@ -13,9 +13,17 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 1% 0;
 }
 .author .authorProducts {
+  margin: 10% 0;
   width: 90%;
   max-width: 1300px;
   display: -webkit-box;
@@ -28,25 +36,35 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 25px;
 }
 .author .authorProducts .authorBooks {
   font-size: 42px;
+  font-weight: 200;
+  color: #1B3764;
 }
 .author .authorProducts .divideBar {
   width: 50px;
-  height: 1px;
-  background-color: yellow;
+  height: 2px;
+  background-color: rgb(247, 247, 86);
 }
 .author .authorProducts .productWrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .author .authorProducts .productWrap .produktItem {
   width: 46%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 20px;
 }
 .author .authorProducts .productWrap .produktItem .itemImg {
   width: 45%;
@@ -57,4 +75,188 @@
 }
 .author .authorProducts .productWrap .produktItem .itemDescr {
   width: 46%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.author .authorProducts .productWrap .produktItem .itemDescr .bookTitle {
+  font-size: 32px;
+  font-weight: 200;
+  color: #1B3764;
+}
+.author .authorProducts .productWrap .produktItem .itemDescr .price {
+  font-size: 22px;
+  color: #FFCA42;
+  font-weight: 200;
+}
+.author .authorProducts .productWrap .produktItem .itemDescr .bookDescr {
+  font-size: 32px;
+  font-weight: 200;
+  color: #1B3764;
+  font-size: 19px;
+}
+.author .authorProducts .productWrap .produktItem .itemDescr .bookTypeWrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
+.authorDetail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1% 0;
+  background-color: rgb(219, 220, 221);
+}
+.authorDetail .authorProducts {
+  margin: 10% 0;
+  width: 90%;
+  max-width: 1300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 25px;
+}
+.authorDetail .authorProducts .authorInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 10%;
+}
+.authorDetail .authorProducts .authorInfo .authorPhoto {
+  position: relative;
+  top: 0;
+  right: 0;
+  min-width: 545px;
+  width: 45%;
+  height: 640px;
+  border: 4px solid yellow;
+  background-color: white;
+  z-index: 1;
+}
+.authorDetail .authorProducts .authorInfo .authorPhoto .InnerPhoto {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-width: 545px;
+  width: 45%;
+  height: 640px;
+  top: -10%;
+  right: 10%;
+}
+.authorDetail .authorProducts .authorInfo .authorDescr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+  max-width: 695px;
+  width: 45%;
+}
+.authorDetail .authorProducts .authorInfo .authorDescr .authorBooks {
+  font-size: 42px;
+  font-weight: 200;
+  color: #1B3764;
+}
+.authorDetail .authorProducts .authorInfo .authorDescr .divideBar {
+  width: 50px;
+  height: 2px;
+  background-color: rgb(247, 247, 86);
+}
+.authorDetail .authorProducts .authorInfo .authorDescr .bookDescr {
+  font-size: 32px;
+  font-weight: 200;
+  color: #1B3764;
+  font-size: 19px;
+}
+.authorDetail .authorProducts .authorInfo .authorDescr .raiting {
+  font-size: 32px;
+  font-weight: 200;
+  color: #1B3764;
+}
+.authorDetail .authorProducts .authorInfo .authorRaiting {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.authorDetail .authorProducts .authorInfo .raitingItem {
+  width: 32%;
+  text-align: center;
+  gap: 20px;
+  padding: 20px;
+}
+.authorDetail .authorProducts .authorInfo .borders {
+  border-left: 1px solid yellow;
+  border-right: 1px solid yellow;
+}
+.authorDetail .authorProducts .authorInfo .authorContacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+  width: 80%;
+  gap: 20px;
+  background-color: #1B3764;
+}
+.authorDetail .authorProducts .authorInfo .authorContacts .authorQr {
+  width: 130px;
+  height: 130px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.authorDetail .authorProducts .authorInfo .authorContacts .contactsContainer .authorName {
+  font-size: 22px;
+  color: #FFCA42;
+  font-weight: 200;
+}
+.authorDetail .authorProducts .authorInfo .authorContacts .contactsContainer .authorEmail {
+  font-size: 32px;
+  font-weight: 200;
+  color: #1B3764;
+  color: white;
+  font-size: 19px;
+  margin: 20px 0;
+}
+.authorDetail .authorProducts .authorInfo .authorContacts .contactsContainer .authorphone {
+  font-size: 32px;
+  font-weight: 200;
+  color: #1B3764;
+  color: white;
+  font-size: 19px;
 }
