--- a/The_Dark_light_Projekt/styles/_author.scss
+++ b/The_Dark_light_Projekt/styles/_author.scss
@@ -4,29 +4,51 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+@mixin mainTitleFonts {
+    font-size: 42px;
+    font-weight: 200;
+    color: #1B3764;
+}
+@mixin itemTitleFonts{
+    font-size: 32px;
+    font-weight: 200;
+    color: #1B3764;
+}
+@mixin itemPriceFonts{
+    font-size: 22px;
+    color: #FFCA42;
+    font-weight: 200;
+}
 .author{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding: 1% 0;
     .authorProducts{
+        margin: 10% 0;
         width: 90%;
         max-width: 1300px;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+        gap: 25px;
         .authorBooks{
-            font-size: 42px;
+            @include mainTitleFonts();
         }
         .divideBar{
             width: 50px;
-            height: 1px;
-            background-color: yellow;
+            height: 2px;
+            background-color: rgb(247, 247, 86);
         }
         .productWrap{
             display: flex;
+            justify-content: space-between;
             .produktItem{
                 width: 46%;
                 display: flex;
+                gap: 20px;
                 .itemImg{
                     width: 45%;
                     min-width: 285px;
@@ -36,9 +58,139 @@
                 }
                 .itemDescr{
                     width: 46%;
+                    display: flex;
+                    flex-direction: column;
+                    gap:20px;
+                    .bookTitle{
+                        @include itemTitleFonts();
+                    }
+                    .price{
+                        @include itemPriceFonts();
+                    }
+                    .bookDescr{
+                        @include itemTitleFonts();
+                        font-size: 19px;
+                    }
+                    .bookTypeWrap{
+                        display: flex;
+                        gap: 10px;
+                        
+                    }
                 }
             }
         }
 
+    }
+}
+.authorDetail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 1% 0;
+    background-color: rgb(219, 220, 221);
+    .authorProducts{
+        margin: 10% 0;
+        width: 90%;
+        max-width: 1300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 25px;
+        .authorInfo{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 10%;
+            .authorPhoto{
+                position: relative;
+                top: 0;
+                right: 0;
+                min-width: 545px;
+                width: 45%;
+                height: 640px;
+                border: 4px solid yellow;
+                background-color: white;
+                z-index: 1;
+                .InnerPhoto{
+                    position: absolute;
+                    background-position: center;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    min-width: 545px;
+                    width: 45%;
+                    height: 640px;
+                    top: -10%;
+                    right: 10%;
+                }
+            }
+            .authorDescr{
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+                max-width: 695px;
+                width: 45%;
+                .authorBooks{
+                    @include mainTitleFonts();
+                }
+                .divideBar{
+                    width: 50px;
+                    height: 2px;
+                    background-color: rgb(247, 247, 86);
+                }
+                .bookDescr{
+                    @include itemTitleFonts();
+                    font-size: 19px;
+                }
+                .raiting{
+                    @include itemTitleFonts();
+                }
+            }
+            .authorRaiting{
+                display: flex;
+
+            }
+            .raitingItem{
+                width: 32%;
+                text-align: center;
+                gap: 20px;
+                padding: 20px;
+            }
+            .borders{
+                border-left: 1px solid yellow;
+                border-right: 1px solid yellow;
+            }
+            .authorContacts{
+                display: flex;
+                padding: 20px;
+                width: 80%;
+                gap: 20px;
+                background-color: #1B3764;
+                .authorQr{
+                    width: 130px;
+                    height: 130px;
+                    background-position: center;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                }
+                .contactsContainer{
+                    .authorName{
+                        @include itemPriceFonts();
+                    }
+                    .authorEmail{
+                        @include itemTitleFonts();
+                        color: white;
+                        font-size: 19px;
+                        margin: 20px 0;
+                    }
+                    .authorphone{
+                        @include itemTitleFonts();
+                        color: white;
+                        font-size: 19px;
+                    }
+                }
+            }
+        }
     }
 }
