--- a/React_Progekts/shop-project/src/components/goodsSearch/goodsSearch.css
+++ b/React_Progekts/shop-project/src/components/goodsSearch/goodsSearch.css
@@ -6,6 +6,26 @@
     border-radius: 12px;
     box-shadow: 0 0 8 px rgb(26, 25, 23);
 }
+.searchWrap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 68vw;
+    border-radius: 12px;
+    box-shadow: 0 0 8px rgb(28, 25, 25);
+    background-color: rgb(175, 175, 175);
+    padding: 20px;
+    position: relative;
+    gap: 20px;
+    top: 0;
+    z-index: 0;
+}
+.listContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .goodsImg{
     width: 40px;
     height: 40px;
@@ -16,7 +36,35 @@
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+    justify-content: center;
+    width: 68vw;
+    border-radius: 12px;
+    box-shadow: 0 0 8px rgb(28, 25, 25);
+    background-color: rgb(175, 175, 175);
+    padding: 20px;
+
 }
 .goodsCard{
-    width: 20%;
+    width: 40%;
+    min-width: 150px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+}
+.basketButton{
+    height: 18px;
+    width: 25px;
+    border-radius: 13px;
+    border: none;
+    font-size: 10px;
+}
+.input{
+    outline: none;
+    border: none;
+}
+.basketButton:active{
+    transform: scale(0.90);
+    transition: transform 0.1s ease;
 }
