--- a/React_Progekts/shop-project/src/index.css
+++ b/React_Progekts/shop-project/src/index.css
@@ -10,3 +10,11 @@
   align-items: center;
   padding: 50px 0;
 }
+.main{
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+}
